proj1/tests/other-tests/oskis-angels_tests/regexperts_tests/correct/expr_multi_line.py
print 4 + \
	7
print (4 +
			7)
print [4+
7]
print {4
   + 7
   : 'a'}
print (4 + (
	7)
)
