proj1/tests/other-tests/oskis-angels_tests/regexperts_tests/error/expr_bad_multi_line.py
print 4 +
	7
print (4) +
7
print [4] +
7
(a = 4 +
	7)
